[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["Todor Lubenov <tlubenov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
